[package]
name = "cntryl-stress"
version = "0.1.0"
edition = "2021"
description = "Lightweight single-shot benchmark runner for system-level stress tests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cntryl/stress"
keywords = ["benchmark", "stress", "testing", "performance"]
categories = ["development-tools::profiling", "development-tools::testing"]

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
linkme = "0.3"
cntryl-stress-macros = { path = "cntryl-stress-macros", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
