[workspace]
members = [".", "cntryl-stress-macros"]
resolver = "2"

[package]
name = "cntryl-stress"
version = "0.1.1"
edition = "2021"
description = "Lightweight single-shot benchmark runner for system-level stress tests"
license = "Apache-2.0"
repository = "https://github.com/cntryl/stress"
keywords = ["benchmark", "stress", "testing", "performance"]
categories = ["development-tools::profiling", "development-tools::testing"]

[features]
default = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
linkme = "0.3"
cntryl-stress-macros = { version = "0.1", path = "cntryl-stress-macros" }

[dev-dependencies]
tempfile = "3"
