[package]
name = "cntryl-stress-demo"
version = "0.1.0"
edition = "2021"
description = "Demonstration benchmarks for cntryl-stress"
license = "Apache-2.0"
repository = "https://github.com/cntryl/stress"
publish = false

[dependencies]
cntryl-stress = { version = "0.1", path = "../core" }

[[bench]]
name = "stress-demo"
path = "benches/stress_demo.rs"
harness = false

[[bench]]
name = "stress-demo1"
path = "benches/stress_demo1.rs"
harness = false

[[bench]]
name = "stress-demo2"
path = "benches/stress_demo2.rs"
harness = false
